K8s/2048-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask-container
        image: 253490760810.dkr.ecr.us-east-1.amazonaws.com/flask-2048:latest
        ports:
        - containerPort: 5000
